# avr-template

./: .gitignore  CMakeLists.txt  README.md  avr-toolchain.cmake  create_module.py  generate_application.py
src/: application.h  cmd_line.c  cmd_line.h  main.cpp  settings.c  settings.h  settings_def.h  uart_stream.c
src/cpp/: new.cpp  new.h  runtime.cpp  runtime.h
src/driver/avr/: SPI.h  spi.hpp  uart.cpp  uart.h  uart.hpp
src/utility/: CircularBuffer.hpp  time.c  time.h
src/utility/scheduler/: task.c  task.h
